<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>io.summernova</groupId>
    <artifactId>summer-admin</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>admin-boot-starter-parent</module>
        <module>admin-common</module>
        <module>admin-core</module>
        <module>admin-spring</module>
        <module>admin-test</module>
        <module>module-base</module>
        <module>module-file</module>
        <module>server</module>
    </modules>

    <properties>
        <!--[base properties]-->
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!--[project version]-->
        <project.version>1.0-SNAPSHOT</project.version>

        <!--[dependencies' version]-->
        <commons-pool2.version>2.12.0</commons-pool2.version>
        <knife4j.version>4.4.0</knife4j.version>
        <lombok.version>1.18.34</lombok.version>
        <minio.version>8.5.4</minio.version>
        <mybatis-plus.version>3.5.5</mybatis-plus.version>
        <mybatis-spring.version>3.0.3</mybatis-spring.version>
        <mysql-connector-j.version>8.3.0</mysql-connector-j.version>
        <swagger-annotations-jakarta.version>2.2.19</swagger-annotations-jakarta.version>
    </properties>

    <dependencies>
        <!--[scope provided]-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!--[project modules]-->
            <dependency>
                <groupId>io.summernova</groupId>
                <artifactId>admin-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.summernova</groupId>
                <artifactId>admin-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.summernova</groupId>
                <artifactId>admin-spring</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.summernova</groupId>
                <artifactId>admin-test</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.summernova</groupId>
                <artifactId>module-base</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.summernova</groupId>
                <artifactId>module-file</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!--[spring boot starters]-->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>

            <!--[scope compile]-->
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot-autoconfigure</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis-spring</artifactId>
                <version>${mybatis-spring.version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations-jakarta</artifactId>
                <version>${swagger-annotations-jakarta.version}</version>
            </dependency>

            <!--[scope provided]-->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <!--[scope runtime]-->
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql-connector-j.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-pool2</artifactId>
                <version>${commons-pool2.version}</version>
                <scope>runtime</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>